# TaskManager

./: README.en.md  README.md  README.zh-CN.md  Task Board.md  config.json  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: AppHeader.tsx  EmptyState.tsx  ErrorBanner.tsx  InputPanel.tsx  TaskCard.tsx  TaskList.tsx
src/config/: load-config.ts  resolve-provider.ts  schema.ts
src/features/extraction/: extract-tasks.ts  prompts.ts  schema.ts
src/features/tasks/: storage.ts  task-types.ts
src/hooks/: useImagePaste.ts  useTasks.ts
src/types/: config.ts
