[package]
name = "task-manager-2-0"
version = "0.1.0"
description = "Local task extraction desktop app"
authors = ["OpenCode"]
edition = "2021"

[lib]
name = "task_manager_2_0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
